--- a/FsPickler/FsPickler.fsproj
+++ b/FsPickler/FsPickler.fsproj
@@ -71,25 +71,28 @@
   <Import Project="$(FSharpTargetsPath)" Condition="Exists('$(FSharpTargetsPath)')" />
   <ItemGroup>
     <Compile Include="assemblyInfo.fs" />
-    <Compile Include="Emit.fs" />
-    <Compile Include="Utils.fs" />
-    <Compile Include="Hashing.fs" />
-    <Compile Include="Header.fs" />
-    <Compile Include="PickleFormat.fs" />
-    <Compile Include="Pickler.fs" />
-    <Compile Include="PrimitivePicklers.fs" />
-    <Compile Include="CompositePickler.fs" />
-    <Compile Include="BinaryFormatter.fs" />
-    <Compile Include="XmlFormatter.fs" />
-    <Compile Include="Types.fs" />
-    <Compile Include="PicklerUtils.fs" />
-    <Compile Include="BasePicklers.fs" />
-    <Compile Include="ReflectionPicklers.fs" />
-    <Compile Include="DotNetPicklers.fs" />
-    <Compile Include="FSharpPicklers.fs" />
-    <Compile Include="ArrayPickler.fs" />
-    <Compile Include="TuplePicklers.fs" />
-    <Compile Include="CombinatorImpls.fs" />
+    <Compile Include="Utils\Utils.fs" />
+    <Compile Include="Utils\Emit.fs" />
+    <Compile Include="Utils\Reflection.fs" />
+    <Compile Include="Utils\ShallowCopy.fs" />
+    <Compile Include="Utils\Hashing.fs" />
+    <Compile Include="PicklerBase\ObjectHeader.fs" />
+    <Compile Include="PicklerBase\PickleFormat.fs" />
+    <Compile Include="PicklerBase\Pickler.fs" />
+    <Compile Include="PicklerBase\CompositePickler.fs" />
+    <Compile Include="PicklerDefinitions\Types.fs" />
+    <Compile Include="PicklerDefinitions\PicklerUtils.fs" />
+    <Compile Include="PicklerDefinitions\PicklerEmit.fs" />
+    <Compile Include="PicklerDefinitions\PrimitivePicklers.fs" />
+    <Compile Include="PicklerDefinitions\AtomicPicklers.fs" />
+    <Compile Include="PicklerDefinitions\ReflectionPicklers.fs" />
+    <Compile Include="PicklerDefinitions\DotNetPicklers.fs" />
+    <Compile Include="PicklerDefinitions\ArrayPickler.fs" />
+    <Compile Include="PicklerDefinitions\FSharpPicklers.fs" />
+    <Compile Include="PicklerDefinitions\TuplePicklers.fs" />
+    <Compile Include="PicklerDefinitions\CombinatorImpls.fs" />
+    <Compile Include="Format\BinaryFormat.fs" />
+    <Compile Include="Format\XmlFormat.fs" />
     <Compile Include="TypeShape.fs" />
     <Compile Include="PicklerResolution.fs" />
     <Compile Include="PicklerCache.fs" />
