--- a/FsPickler/FsPickler.fsproj
+++ b/FsPickler/FsPickler.fsproj
@@ -93,9 +93,9 @@
     <Compile Include="PicklerDefinitions\CombinatorImpls.fs" />
     <Compile Include="Format\BinaryFormat.fs" />
     <Compile Include="Format\XmlFormat.fs" />
-    <Compile Include="TypeShape.fs" />
-    <Compile Include="PicklerResolution.fs" />
-    <Compile Include="PicklerCache.fs" />
+    <Compile Include="PicklerGeneration\TypeShape.fs" />
+    <Compile Include="PicklerGeneration\PicklerResolution.fs" />
+    <Compile Include="PicklerGeneration\PicklerCache.fs" />
     <Compile Include="FsPickler.fs" />
     <Compile Include="Combinators.fs" />
     <Compile Include="ExtensionMethods.fs" />
