reposition solution items

--- a/FsPickler/FsPickler.fsproj
+++ b/FsPickler/FsPickler.fsproj
@@ -78,24 +78,24 @@
     <Compile Include="Utils\Reflection.fs" />
     <Compile Include="Utils\ShallowCopy.fs" />
     <Compile Include="Utils\Hashing.fs" />
-    <Compile Include="PicklerBase\ObjectHeader.fs" />
-    <Compile Include="PicklerBase\PickleFormat.fs" />
-    <Compile Include="PicklerBase\Pickler.fs" />
-    <Compile Include="PicklerBase\CompositePickler.fs" />
-    <Compile Include="PicklerDefinitions\Types.fs" />
-    <Compile Include="PicklerDefinitions\PicklerUtils.fs" />
-    <Compile Include="PicklerDefinitions\PicklerEmit.fs" />
-    <Compile Include="PicklerDefinitions\PrimitivePicklers.fs" />
-    <Compile Include="PicklerDefinitions\AtomicPicklers.fs" />
-    <Compile Include="PicklerDefinitions\ReflectionPicklers.fs" />
-    <Compile Include="PicklerDefinitions\DotNetPicklers.fs" />
-    <Compile Include="PicklerDefinitions\ArrayPickler.fs" />
-    <Compile Include="PicklerDefinitions\FSharpPicklers.fs" />
-    <Compile Include="PicklerDefinitions\TuplePicklers.fs" />
-    <Compile Include="PicklerDefinitions\CombinatorImpls.fs" />
+    <Compile Include="Format\ObjectHeader.fs" />
+    <Compile Include="Format\PickleFormat.fs" />
     <Compile Include="Format\BinaryFormat.fs" />
     <Compile Include="Format\XmlFormat.fs" />
     <Compile Include="Format\JsonFormat.fs" />
+    <Compile Include="Picklers\Pickler.fs" />
+    <Compile Include="Picklers\PrimitivePicklers.fs" />
+    <Compile Include="Picklers\CompositePickler.fs" />
+    <Compile Include="Picklers\Types.fs" />
+    <Compile Include="Picklers\PicklerUtils.fs" />
+    <Compile Include="Picklers\PicklerEmit.fs" />
+    <Compile Include="Picklers\AtomicPicklers.fs" />
+    <Compile Include="Picklers\ReflectionPicklers.fs" />
+    <Compile Include="Picklers\DotNetPicklers.fs" />
+    <Compile Include="Picklers\ArrayPickler.fs" />
+    <Compile Include="Picklers\FSharpPicklers.fs" />
+    <Compile Include="Picklers\TuplePicklers.fs" />
+    <Compile Include="Picklers\CombinatorImpls.fs" />
     <Compile Include="PicklerGeneration\TypeShape.fs" />
     <Compile Include="PicklerGeneration\PicklerResolution.fs" />
     <Compile Include="PicklerGeneration\PicklerCache.fs" />
