--- a/FsPickler/FsPickler.fsproj
+++ b/FsPickler/FsPickler.fsproj
@@ -82,7 +82,7 @@
     <Compile Include="Format\PickleFormat.fs" />
     <Compile Include="Format\BinaryFormat.fs" />
     <Compile Include="Format\XmlFormat.fs" />
-    <None Include="Format\JsonFormat.fs" />
+    <Compile Include="Format\JsonFormat.fs" />
     <Compile Include="Picklers\Pickler.fs" />
     <Compile Include="Picklers\PrimitivePicklers.fs" />
     <Compile Include="Picklers\CompositePickler.fs" />
