--- a/FsPickler/FsPickler.fsproj
+++ b/FsPickler/FsPickler.fsproj
@@ -83,20 +83,20 @@
     <Compile Include="Format\BinaryFormat.fs" />
     <Compile Include="Format\XmlFormat.fs" />
     <Compile Include="Format\JsonFormat.fs" />
-    <Compile Include="Picklers\Types.fs" />
-    <Compile Include="Picklers\TypeCache.fs" />
-    <Compile Include="Picklers\Pickler.fs" />
-    <Compile Include="Picklers\PrimitivePicklers.fs" />
-    <Compile Include="Picklers\CompositePickler.fs" />
-    <Compile Include="Picklers\PicklerUtils.fs" />
-    <Compile Include="Picklers\PicklerEmit.fs" />
-    <Compile Include="Picklers\ReflectionPicklers.fs" />
-    <Compile Include="Picklers\GenerationTypes.fs" />
-    <Compile Include="Picklers\DotNetPicklers.fs" />
-    <Compile Include="Picklers\ArrayPickler.fs" />
-    <Compile Include="Picklers\FSharpPicklers.fs" />
-    <Compile Include="Picklers\TuplePicklers.fs" />
-    <Compile Include="Picklers\CombinatorImpls.fs" />
+    <Compile Include="PicklerBase\Types.fs" />
+    <Compile Include="PicklerBase\TypeCache.fs" />
+    <Compile Include="PicklerBase\Pickler.fs" />
+    <Compile Include="PicklerBase\PrimitivePicklers.fs" />
+    <Compile Include="PicklerBase\CompositePickler.fs" />
+    <Compile Include="PicklerBase\PicklerUtils.fs" />
+    <Compile Include="PicklerBase\PicklerEmit.fs" />
+    <Compile Include="PicklerBase\ReflectionPicklers.fs" />
+    <Compile Include="PicklerGeneration\GenerationTypes.fs" />
+    <Compile Include="PicklerGeneration\DotNetPicklers.fs" />
+    <Compile Include="PicklerGeneration\ArrayPickler.fs" />
+    <Compile Include="PicklerGeneration\FSharpPicklers.fs" />
+    <Compile Include="PicklerGeneration\TuplePicklers.fs" />
+    <Compile Include="PicklerGeneration\CombinatorImpls.fs" />
     <Compile Include="PicklerGeneration\TypeShape.fs" />
     <Compile Include="PicklerGeneration\PicklerResolution.fs" />
     <Compile Include="PicklerGeneration\PicklerCache.fs" />
