pickler generation rewrite

--- a/FsPickler/FsPickler.fsproj
+++ b/FsPickler/FsPickler.fsproj
@@ -89,15 +89,16 @@
     <Compile Include="PicklerBase\PrimitivePicklers.fs" />
     <Compile Include="PicklerBase\CompositePickler.fs" />
     <Compile Include="PicklerBase\PicklerUtils.fs" />
-    <Compile Include="PicklerBase\PicklerEmit.fs" />
     <Compile Include="PicklerBase\ReflectionPicklers.fs" />
+    <Compile Include="PicklerGeneration\TypeShape.fs" />
     <Compile Include="PicklerGeneration\GenerationTypes.fs" />
+    <Compile Include="PicklerGeneration\PicklerEmit.fs" />
     <Compile Include="PicklerGeneration\DotNetPicklers.fs" />
-    <Compile Include="PicklerGeneration\ArrayPickler.fs" />
+    <Compile Include="PicklerGeneration\ArrayPicklers.fs" />
     <Compile Include="PicklerGeneration\FSharpPicklers.fs" />
     <Compile Include="PicklerGeneration\TuplePicklers.fs" />
     <Compile Include="PicklerGeneration\CombinatorImpls.fs" />
-    <Compile Include="PicklerGeneration\TypeShape.fs" />
+    <Compile Include="PicklerGeneration\PicklerFactory.fs" />
     <Compile Include="PicklerGeneration\PicklerResolution.fs" />
     <Compile Include="PicklerGeneration\PicklerCache.fs" />
     <Compile Include="RootObjectSerialization.fs" />
