--- a/FsPickler/FsPickler.fsproj
+++ b/FsPickler/FsPickler.fsproj
@@ -99,11 +99,12 @@
     <Compile Include="Format\BinaryFormat.fs" />
     <Compile Include="Format\XmlFormat.fs" />
     <Compile Include="Format\JsonFormat.fs" />
-    <Compile Include="RootObjectSerialization.fs" />
-    <Compile Include="FsPickler.fs" />
-    <Compile Include="Combinators.fs" />
-    <Compile Include="ExtensionMethods.fs" />
-    <None Include="Benchmark.fsx" />
+    <Compile Include="FsPickler\RootObjectSerialization.fs" />
+    <Compile Include="FsPickler\FsPickler.fs" />
+    <Compile Include="FsPickler\BinaryPickler.fs" />
+    <Compile Include="FsPickler\StringPickler.fs" />
+    <Compile Include="FsPickler\ExtensionMethods.fs" />
+    <Compile Include="FsPickler\Combinators.fs" />
     <None Include="Test.fsx" />
     <None Include="packages.config" />
   </ItemGroup>
