--- a/FsPickler.Tests/FsPickler.Tests.fsproj
+++ b/FsPickler.Tests/FsPickler.Tests.fsproj
@@ -52,6 +52,8 @@
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <TargetFrameworkProfile />
     <OutputPath>bin\Release\</OutputPath>
+    <OtherFlags>
+    </OtherFlags>
   </PropertyGroup>
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
@@ -66,6 +68,7 @@
   <ItemGroup>
     <Compile Include="Utils.fs" />
     <Compile Include="Serializers.fs" />
+    <Compile Include="BinaryTests.fs" />
     <Compile Include="Remoting.fs" />
     <Compile Include="TestTypes.fs" />
     <Compile Include="CorrectnessTests.fs" />
@@ -79,6 +82,10 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="FsCheck">
+      <HintPath>..\packages\FsCheck.0.9.4.0\lib\net40-Client\FsCheck.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="FSharp.Charting">
       <HintPath>..\packages\FSharp.Charting.0.90.6\lib\net40\FSharp.Charting.dll</HintPath>
       <Private>True</Private>
@@ -119,6 +126,11 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
     <Reference Include="System.Runtime.Serialization" />
+    <ProjectReference Include="..\FsPickler.Binary\FsPickler.Binary.csproj">
+      <Name>FsPickler.Binary</Name>
+      <Project>{490f47d5-5ffa-4b2a-9a1f-039384e83b12}</Project>
+      <Private>True</Private>
+    </ProjectReference>
     <ProjectReference Include="..\FsPickler\FsPickler.fsproj">
       <Name>FsPickler</Name>
       <Project>{3ad987bf-f0fa-40bd-9dae-4af3a5fe9cc7}</Project>
