--- a/src/FsPickler.Binary/FsPickler.Binary.csproj
+++ b/src/FsPickler.Binary/FsPickler.Binary.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AssemblyInfo.cs" />
     <Compile Include="BinaryWriter.cs" />
     <Compile Include="BinaryReader.cs" />
     <Compile Include="Memcpy.cs" />
